# clutter-sharp

./: COPYING  Makefile.in  README.md  aclocal.m4  configure  configure.ac
clutter/: Makefile.am  Makefile.in  clutter-sharp.dll.config.in  clutter-sharp.pc.in
clutter-gtk/: Makefile.in  clutter-gtk-api.raw  clutter-gtk-sharp.dll.config.in  clutter-gtk-sharp.pc.in  clutter-gtk-sources.xml
clutter/Clutter/: Actor.custom  ActorBox.custom  AnimationChain.cs  Application.cs  BehaviourPath.custom  Color.custom  Event.cs  Idle.cs  Makefile.in  Rectangle.custom  Stage.custom  Texture.custom  Timeout.cs  clutter-api.raw  clutter-sources.xml  clutter.metadata
clutter/Cogl/: General.cs  Makefile.in  Matrix.cs  Path.custom  cogl-api.raw  cogl-sources.xml
docs/: Makefile.in
docs/clutter-gtk-sharp/: Makefile.in
docs/clutter-gtk-sharp/en/: Patch.xml  index.xml
docs/clutter-gtk-sharp/en/Clutter/: Embed.xml  GtkTextureError.xml  GtkUtil.xml  Scrollable.xml  ScrollableAdapter.xml  ScrollableImplementor.xml  Viewport.xml  Zoomable.xml  ZoomableAdapter.xml  ZoomableImplementor.xml
docs/clutter-gtk-sharp/en/GtkSharp.ClutterSharp/: ObjectManager.xml
docs/clutter-sharp/: Makefile.in
docs/clutter-sharp/en/: Patch.xml  index.xml
docs/clutter-sharp/en/Clutter/: Actor.xml  ActorAddedArgs.xml  ActorAddedHandler.xml  ActorBox.xml  ActorFlags.xml  ActorRemovedArgs.xml  ActorRemovedHandler.xml  AllocationChangedArgs.xml  AllocationChangedHandler.xml  AllocationFlags.xml  Alpha.xml  AlphaFunc.xml  Animatable.xml  AnimatableAdapter.xml  AnimatableImplementor.xml  Animation.xml  AnimationChain.xml  AnimationMode.xml  Application+Win32.xml  Application.xml  (+172 more)
examples/: Makefile.in
gapi/: Makefile.in
gapi/generator/: BoxedGen.cs  Ctor.cs  EnumGen.cs  GenBase.cs  GenerationInfo.cs  InterfaceGen.cs  Makefile.in  MethodBase.cs  ObjectGen.cs  OpaqueGen.cs  Parameters.cs  Parser.cs  ReturnValue.cs  Signal.cs  SymbolTable.cs  VMSignature.cs
gapi/parser/: Makefile.in  gapi-fixup.cs  gapi-parser.cs
glib/: Makefile.am  Makefile.in
(+35 files in other folders)
